--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Blue Cloud Journal</string>
+
+    <!-- Add Journal Page -->
+    <string name="aj_title">New Journal</string>
+    <string name="mood_title">How was your day?</string>
 </resources>
