--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,10 @@
     <string name="m_goals">Goals Page</string>
     <string name="m_settings">Settings Page</string>
 
+    <!-- Home Page -->
+    <string name="hp_title">User\'s Name</string>
+    <string name="aj_btn">Add New Journal</string>
+
     <!-- Add Journal Page -->
     <string name="aj_title">New Journal</string>
     <string name="mood_title">How was your day?</string>
