--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,8 @@
     <!-- Add Journal Page -->
     <string name="aj_title">New Journal</string>
     <string name="mood_title">How was your day?</string>
+
+    <!-- Goals Page -->
+    <string name="gp_title">User\'s Goals</string>
+    <string name="add_goal_btn">Add New Goal</string>
 </resources>
