--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,9 @@
     <!-- Add Journal Page -->
     <string name="aj_title">New Journal</string>
     <string name="mood_title">How was your day?</string>
+    <string name="activities_title">Activities:</string>
+    <string name="btn_new_activity">New Activity</string>
+    <string name="popup_add_activity">Add Activity</string>
 
     <!-- Goals Page -->
     <string name="gp_title">User\'s Goals</string>
