After a bit of a break due to catching Covid, I am back. I have added a what went well/what went wrong field into the add journal xml file. More changes to be made today.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,9 @@
     <string name="aj_title">New Journal</string>
     <string name="aj_mood_title">How was your day?</string>
     <string name="aj_activities_title">Activities:</string>
+    <string name="aj_wwwell_title">What Went Well?</string>
+    <string name="aj_wwwrong_title">What Went Wrong?</string>
+    <string name="aj_suggest">Put your text here…</string>
 
     <!-- Add Activity Popup -->
     <string name="popup_add_activity">Add Activity</string>
