Added a way to open the Goals displayed within the recyclerview on the goals page. Added an amend method to the goals(however this will need tweaking as unable to save as of yet)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,7 @@
 
     <!-- Add Goals Page -->
     <string name="ag_title">New Goal</string>
+    <string name="amendg_title">Amend Goal</string>
     <string name="ag_goal_title">Goal Title:</string>
     <string name="ag_goal_desc">Goal Description</string>
     <string name="ag_goal_prog">Current Progress</string>
