Added a delete all method to the SettingsPage.java, this is used for testing to easily start the app from scratch.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,4 +59,7 @@
     <string name="sp_notif">Notifications</string>
     <string name="sp_reminder">Daily Reminder: </string>
 
+    <!-- Testing -->
+    <string name="wipe">Wipe all data</string>
+
 </resources>
