Added a method to insert test data to the databases within the SettingsPage.java

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,5 +61,6 @@
 
     <!-- Testing -->
     <string name="wipe">Wipe all data</string>
+    <string name="add">Add test data</string>
 
 </resources>
